--- a/styles.css
+++ b/styles.css
@@ -549,10 +549,9 @@ p{
 }
 
 @media (max-width: 480px) {
-  .nav-principal,
-  .search {
-      display: none;
-  }
+  .nav-principal {
+        display: none;
+    }
   header {
     flex-direction: column;
     align-items: flex-start;
